cabal-version:      2.4
name:               Win32-network
version:            0.1.1.1
license:            Apache-2.0
license-file:       LICENSE NOTICE
copyright:          2019 Input Output (Hong Kong) Ltd.
maintainer:         duncan@well-typed.com, marcin.szamotulski@iohk.io
author:             Duncan Coutts, Marcin Szamotulski
tested-with:        ghc ==8.10.7 ghc ==9.2.4 ghc ==9.4.2
synopsis:           Win32 network API
category:           System
build-type:         Simple
extra-source-files:
    README.md
    ChangeLog.md
    include/Win32-network.h

source-repository head
    type:     git
    location: https://github.com/haskell-works/Win32-network

flag demo
    description: Build the named pipe demos
    default:     False

library
    exposed-modules:  System.IOManager
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Wincomplete-uni-patterns
        -Wincomplete-record-updates -Wpartial-fields -Widentities
        -Wredundant-constraints

    build-depends:    base >=4.5 && <5

    if os(windows)
        exposed-modules:
            System.Win32.NamedPipes
            System.Win32.Async
            System.Win32.Async.File
            System.Win32.Async.ErrCode
            System.Win32.Async.Socket
            System.Win32.Async.Socket.ByteString
            System.Win32.Async.Socket.ByteString.Lazy
            System.Win32.Async.Internal

        other-modules:
            System.Win32.Async.IOData
            System.Win32.Async.IOManager
            System.Win32.Async.Overlapped
            System.Win32.Async.Socket.Syscalls
            System.Win32.Async.WSABuf

        extra-libraries: ws2_32
        include-dirs:    include
        build-depends:
            bytestring >=0.10 && <0.13,
            network,
            Win32 >=2.5.4.1

executable named-pipe-demo
    main-is:          named-pipe-demo.hs
    hs-source-dirs:   demo
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Wincomplete-uni-patterns
        -Wincomplete-record-updates -Wpartial-fields -Widentities
        -Wredundant-constraints -threaded

    build-depends:    base

    if os(windows)
        build-depends:
            binary,
            bytestring,
            Win32,
            Win32-network

test-suite test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Wincomplete-uni-patterns
        -Wincomplete-record-updates -Wpartial-fields -Widentities
        -Wredundant-constraints -threaded

    build-depends:    base

    if os(windows)
        other-modules:
            Test.Generators
            Test.Async.PingPong
            Test.Async.Handle
            Test.Async.Socket

        build-depends:
            async,
            binary,
            bytestring,
            network,
            stm,
            tasty,
            tasty-hunit,
            tasty-quickcheck,
            QuickCheck,
            quickcheck-instances,
            Win32,
            Win32-network
