cabal-version: 3.0
name: async-components
version: 0.1.0.0
synopsis:
  Async components for building concurrent server processes.
bug-reports: https://github.com/input-output-hk/marlowe-cardano/issues
license: Apache-2.0
author: Jamie Bertram
maintainer: jamie.bertram@iohk.io
stability: experimental
category: Language
license-files:
  LICENSE
  NOTICE

source-repository head
  type: git
  location: https://github.com/input-output-hk/marlowe-cardano
  subdir: async-components

library
  default-language: Haskell2010
  hs-source-dirs:   src
  default-extensions:
    BlockArguments
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    ExplicitForAll
    GeneralizedNewtypeDeriving
    LambdaCase
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TupleSections
  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities
  exposed-modules:
    Control.Concurrent.Component
    Control.Concurrent.Component.Probes
  build-depends:
      base >= 4.9 && < 5
    , lifted-async >= 0.10 && < 0.11
    , lifted-base >= 0.2.3 && < 0.3
    , monad-control >= 1 && < 1.1
    , servant >= 0.19 && < 0.20
    , servant-client >= 0.19 && < 0.20
    , servant-server >= 0.19 && < 0.20
    , stm >= 2.5 && < 2.6
    , transformers-base >= 0.4 && < 0.5
    , warp >= 3.3 && < 4
